# Sisyphus-Linux

./: .gitignore  README.md
.copr/: Makefile
the-forge/forge-core/: Cargo.toml
the-forge/forge-core/examples/: boot.rhai  desktop.toml  graphical.default.target  network.toml
the-forge/forge-core/examples/native/: 00-sysinit.target.toml  01-localmount.service.toml  (+3 more)
the-forge/forge-core/examples/native-desktop/: 00-multi-user.target.toml  00-sysinit.target.toml  01-dbus.socket.toml  01-localmount.service.toml  02-dbus.service.toml  02-devfs.service.toml  03-udev.service.toml  03a-udev-control.socket.toml  03b-udev-kernel.socket.toml  04-udev-trigger.service.toml  05-logind.service.toml  05-udev-settle.service.toml  06-network-setup.service.toml  07-network-manager.service.toml  10-early.service.toml  50-getty-console.service.toml  51-getty-tty3.service.toml  52-polkit.service.toml  53-accounts-daemon.service.toml  54-user-sessions.service.toml  56-relabel-watch.service.toml  57-plymouth-kill.service.toml  60-display-manager.service.toml  61-forge-desktop.service.toml  98-rescue.target.toml  99-graphical.target.toml
the-forge/forge-core/src/: boot.rs  boot_debug.rs  cgroup.rs  dbus_launch.rs  dbus_srv.rs  dbus_wait.rs  device.rs  early_boot.rs  engine.rs  environment.rs  jobs.rs  journal.rs  launch.rs  main.rs  mount_unit.rs  network.rs  notify.rs  plymouth.rs  privdrop.rs  rc_update.rs  reactor.rs  reaper.rs  recovery.rs  sandbox.rs  selinux.rs  timer.rs  udev.rs  user_sessions.rs  vfs.rs
the-forge/forge-logind/: Cargo.toml
the-forge/forge-logind/src/: main.rs
(+212 files in other folders)
