[package]
name = "forge-core"
version = "2.0.0"
edition = "2021"
description = "The immortal PID 1 core for The Forge"
default-run = "forge-core"

[[bin]]
name = "forge-journalctl"
path = "src/bin/forge-journalctl.rs"

[dependencies]
forge-common = { path = "../forge-common" }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "mount", "fs", "event", "socket", "inotify"] }
rhai = { version = "1.19.0", features = ["no_float"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1"
slotmap = "1.0"
toml = "0.8"
parking_lot = "0.12"
zbus = { version = "5.16.0", features = ["blocking"] }
