[package]
name = "forge-logind"
version = "0.1.0"
edition = "2021"
description = "Minimal session manager for The Forge (logind-compatible subset)"

[[bin]]
name = "forge-logind"
path = "src/main.rs"

[dependencies]
forge-common = { path = "../forge-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
